# web3lab

./: BUILD.bazel  bazel-bin  bazel-out  bazel-testlogs  bazel-web3lab  build.properties  build.xml  pom.xml
src/main/java/ru/ifmo/se/web3lab/beans/: PointBean.java
src/main/java/ru/ifmo/se/web3lab/managers/: DBManager.java
src/main/java/ru/ifmo/se/web3lab/mbeans/: ClickInterval.java  ClickIntervalMBean.java  PointCounter.java  PointCounterMBean.java
src/main/java/ru/ifmo/se/web3lab/models/: Point.java
src/main/resources/i18n/: messages.properties
src/main/webapp/: index.css  index.xhtml  main.xhtml
src/main/webapp/WEB-INF/: faces-config.xml
src/main/webapp/script/: canvas.js  clock.js  script.js
test/java/ru/ifmo/se/: PointTest.java
